Fix: horizontal overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,6 +68,7 @@
   }
 
   html {
+    overflow-x: hidden;
     background-color: #303841; /* for overscroll */
   }
   
